--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-<h1>Aplikacja czat</h1><script type="text/javascript" src="./bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Webpack + React</title>
+</head>
+<body>
+    <div id="root"></div>
+    
+<script type="text/javascript" src="./bundle.js"></script></body>
+</html>
+
